<resources>
    <string name="app_name">RunningTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_run">Run</string>
    <string name="ble_not_supported">Sorry, your device doesn\'t support BLE</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_start">Start</string>
    <string name="local_checkbox">Local</string>
    <string name="tolerance_header">Tolerance [km/h]</string>
    <string name="desired_speed_header">Desired Speed [km/h]</string>
    <string name="speed">Speed [km/h]</string>
    <string name="use_location">use location</string>
    <string name="initial_speed_text"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
