<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/desired_speed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desired_speed_header" />

    <TextView
        android:id="@+id/desired_speed_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <SeekBar
        android:id="@+id/desired_speed_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="10"/>

    <TextView
        android:id="@+id/tolerance_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tolerance_header" />

    <TextView
        android:id="@+id/tolerance_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <SeekBar
        android:id="@+id/tolerance_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="0"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/speed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed" />
        <CheckBox
            android:id="@+id/uselocation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_location"/>
    </LinearLayout>

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <SeekBar
        android:id="@+id/speed_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="10"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"/>

    <CheckBox
        android:id="@+id/local_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_checkbox" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>